Replaced flex with grid for header, to align all icons. Fixed crio dark logo

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -89,11 +89,11 @@
 }
 
 .description .header {
-  /* display: grid; */
-  /* grid: auto-flow dense / 1fr 1fr 1fr; */
-  display: flex;
+  display: grid;
+  grid: auto-flow dense / 6fr 2.7em 6fr;
+  /* /* display: flex; */
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */ 
 }
 
 .description .title {
